--- a/miro_opencv_examples/hostpc/grab_from_stream/Makefile
+++ b/miro_opencv_examples/hostpc/grab_from_stream/Makefile
@@ -1,7 +1,7 @@
 CC:= g++
-CFLAGS:= -I/usr/local/include/opencv -L/usr/local/lib
+CFLAGS:= -I/usr/local/include/opencv4 -L/usr/local/lib -std=c++11
 OBJECTS:=
-LIBRARIES:= -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_calib3d -lopencv_features2d -lopencv_flann -lopencv_imgcodecs -lopencv_video -lopencv_videoio -lopencv_ml -lopencv_objdetect
+LIBRARIES:= -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_flann -lopencv_imgcodecs -lopencv_video -lopencv_videoio -lopencv_objdetect
 .PHONY: all clean
 all: grab_from_stream
 grab_from_stream:
